--- a/checkout.html
+++ b/checkout.html
@@ -132,7 +132,7 @@
 
         <div class="btns">
           <a class="pill secondary" href="shop.html">Back to Shop</a>
-          <a id="payBtn" class="pill" href="#">Pay Securely</a>
+          <a id="payBtn" class="pill" href="#">Send invoice to 3Leathers</a>
           <!-- Payment icons section -->
 <div style="text-align:center; margin-top:12px;">
   <a href="https://square.link/u/vrAPnrrI" target="_blank" rel="noopener">
