--- a/checkout.html
+++ b/checkout.html
@@ -38,7 +38,12 @@
     .thumb img{width:100%;height:100%;object-fit:cover}
     .meta h3{margin:0 0 6px 0}
     .opt{margin:0 0 4px 0}
-    .qtybox{display:flex;gap:8px;align-items:center}
+    ..qtybox{
+  display:flex;
+  gap:8px;
+  align-items:center;
+  flex-wrap:wrap;
+}
     .qtybox input{width:72px;background:#0f0f0f;border:1px solid #2a2a2a;color:var(--ink);padding:8px;border-radius:8px}
     .price{white-space:nowrap}
     .right{text-align:right}
