--- a/talvaren-vault.html
+++ b/talvaren-vault.html
@@ -26,29 +26,117 @@
 <h1>Talvaren — Reference Vault</h1>
 
 <p>
-This page is intentionally unlinked and unindexed.  
-It serves as a read-only reference source.
+This page is intentionally unlinked and unindexed.<br>
+It serves as a read-only canonical reference source.
 </p>
 
-<section id="lore-bible">
-  <h2>Lore-Bible</h2>
-  <p>
-    <!-- Paste Lore Bible canon here -->
-  </p>
+<!-- ===================== -->
+<!-- WORLD LORE -->
+<!-- ===================== -->
+<section id="world-lore-bible">
+  <h2>World Lore Bible</h2>
+  <p><!-- Canon world lore goes here --></p>
 </section>
 
+<!-- ===================== -->
+<!-- CORE MODULES -->
+<!-- ===================== -->
 <section id="module-1a">
-  <h2>Module 1A</h2>
-  <p>
-    <!-- Paste Module 1A content here -->
-  </p>
+  <h2>Module 1A — Player Core Systems</h2>
+  <p></p>
 </section>
 
 <section id="module-1b">
-  <h2>Module 1B</h2>
-  <p>
-    <!-- Paste Module 1B content here -->
-  </p>
+  <h2>Module 1B — Equipment & Gear Systems</h2>
+  <p></p>
+</section>
+
+<section id="module-2">
+  <h2>Module 2 — World Engine & Global Systems</h2>
+  <p></p>
+</section>
+
+<section id="module-3">
+  <h2>Module 3 — Guild Infrastructure, Maps, Travel, Identification & Hub Logic</h2>
+  <p></p>
+</section>
+
+<section id="module-4">
+  <h2>Module 4 — World Geography & Biomes</h2>
+  <p></p>
+</section>
+
+<section id="module-5">
+  <h2>Module 5 — Mandala Damage, Divine Systems & Probability</h2>
+  <p></p>
+</section>
+
+<section id="module-6">
+  <h2>Module 6 — Professional Classes, Crafting & Shared Systems</h2>
+  <p></p>
+</section>
+
+<section id="module-7">
+  <h2>Module 7 — Non-Magic Abilities & Skills</h2>
+  <p><em>Reserved — not yet populated.</em></p>
+</section>
+
+<section id="module-8">
+  <h2>Module 8 — Damage Types & Mandala Integration</h2>
+  <p><em>Superseded by Module 5. Retained for indexing.</em></p>
+</section>
+
+<section id="module-9">
+  <h2>Module 9 — NPC & AI Behavior</h2>
+  <p></p>
+</section>
+
+<section id="module-10">
+  <h2>Module 10 — Professions (Merged)</h2>
+  <p><em>Merged into Module 6. Retained for archival reference.</em></p>
+</section>
+
+<section id="module-11">
+  <h2>Module 11 — Economy & Vendors (Merged)</h2>
+  <p><em>Merged into Module 6. Retained for archival reference.</em></p>
+</section>
+
+<section id="module-12">
+  <h2>Module 12 — Progression, XP & Caps</h2>
+  <p></p>
+</section>
+
+<section id="module-13">
+  <h2>Module 13 — Materials, Resources & Reagents</h2>
+  <p></p>
+</section>
+
+<section id="module-14">
+  <h2>Module 14 — Governance, Enforcement & Appeals</h2>
+  <p></p>
+</section>
+
+<!-- ===================== -->
+<!-- TEMP / WORKING AREAS -->
+<!-- ===================== -->
+<section id="tables-temp">
+  <h2>Tables — Temp</h2>
+  <p></p>
+</section>
+
+<section id="registries-temp">
+  <h2>Registries — Temp</h2>
+  <p></p>
+</section>
+
+<section id="patches-temp">
+  <h2>Patches — Temp</h2>
+  <p></p>
+</section>
+
+<section id="holding-temp">
+  <h2>Holding — Temp</h2>
+  <p></p>
 </section>
 
 </body>
