--- a/talvaren-vault.html
+++ b/talvaren-vault.html
@@ -459,7 +459,145 @@ Status Summary
 
 <section id="holding-temp">
   <h2>Holding — Temp</h2>
-  <p></p>
+  PATCH-HOLDING-OWNER-DECISIONS-001
+
+Status: HOLDING — Parked, No Resolution Attempted
+
+Scope: World Systems / Economy / Design Doctrine
+
+⸻
+
+1. Multi-Account Route Optimization
+
+Affects: World Systems / Economy
+
+Multi-account coordination used to:
+	•	Observe caravan timing
+	•	Optimize personal logistics
+	•	Share route knowledge
+
+This behavior is acknowledged and intentionally not restricted.
+
+No systemic countermeasures are defined at this time.
+
+Status: HOLDING
+
+⸻
+
+2. Safe Zone Camping Behavior
+
+Affects: World Design / Zone Placement
+
+Players may congregate at Safe Zones (including Caravan Route Posts) for:
+	•	Comfort
+	•	Safety
+	•	Social or logistical reasons
+
+Mitigation through world design choices (content placement, value density) is acknowledged but not systematized.
+
+Status: HOLDING
+
+⸻
+
+3. Caravan-Edge Death Exploit (Edge Case)
+
+Affects: Caravan Protection / Death Handling
+
+Highly unlikely scenario:
+	•	Player attempts to die intentionally at the boundary of caravan protection to probe respawn behavior
+
+No explicit system guard is added at this time.
+
+Status: HOLDING
+
+⸻
+
+4. Exploit & Emergent Play Doctrine
+
+Affects: Design Doctrine (formerly Module 10 reference)
+
+This doctrine:
+	•	Governs design intent and evaluation only
+	•	Introduces no mechanics
+	•	Does not override rules unless explicitly referenced by a future patch
+
+Status: HOLDING — Intent Layer Only
+
+⸻
+
+5. Material Costs for Spell Scrolls
+
+Affects: Scribe Scroll Creation
+
+Material requirements for spell scrolls are explicitly deferred:
+	•	Reagents
+	•	Quantities
+	•	Rarity tiers
+	•	Special components
+
+To be defined in a later patch.
+
+Status: HOLDING
+
+⸻
+
+6. Owner Decision Required — Parked Topics
+
+No resolution attempted. Items are parked, not discarded.
+	•	Final destination of mount travel routing logic (likely Module 4)
+	•	Whether mount lists are duplicated in a global registry or referenced only
+	•	Future interaction between mounts and caravans beyond logistics role
+
+Status: HOLDING — OWNER DECISION REQUIRED
+
+⸻
+
+7. Canonical Overrides (Valid Patch Content)
+
+These overrides are acknowledged as valid, but placement and integration remain pending.
+	•	Mob taxonomy replaces prior tier-based assumptions
+	•	Resistance system simplified to four categories
+	•	Loot logic supersedes older humanoid / fauna drop rules
+	•	Respawn logic overrides prior global respawn assumptions
+	•	Unique item use-it-or-lose-it rule restated
+
+Status: HOLDING — INTEGRATION PENDING
+
+⸻
+
+8. Owner Decision Required — Rule Placement Conflicts
+
+No resolution attempted.
+	•	Placement of Use-It-Or-Lose-It (10-day rule) vs existing global True Unique rule (possible overlap)
+	•	Treatment of Halfling resistance modifier (race-based exception intersects Module 1A)
+	•	Scope of Major NPC lootability vs governance / enforcement module
+
+Status: HOLDING — OWNER DECISION REQUIRED
+
+⸻
+
+9. Additional Parked Interactions
+
+No resolution attempted.
+	•	Interaction between Wayfinder’s Beacon and teleport restrictions
+	•	Scope of Deep Delver Markets relative to Vast Below governance
+	•	Relationship between Zone Cluster soft bands and XP curve tables
+	•	Status of UNIVERSAL PRINT FORMAT DIRECTIVE (process vs canon interaction)
+
+“Kobold Lost-and-Found is flavor-only and intentionally non-mechanical.”
+
+Status: HOLDING
+
+⸻
+
+HOLDING SUMMARY
+	•	This section contains no active mechanics
+	•	It preserves:
+	•	Known edge cases
+	•	Owner decisions
+	•	Deferred integrations
+	•	Design doctrine
+	•	Nothing here is implied, enforced, or implemented
 </section>
 
 </body>
