--- a/talvaren-vault.html
+++ b/talvaren-vault.html
@@ -454,7 +454,353 @@ Status Summary
 
 <section id="patches-temp">
   <h2>Patches — Temp</h2>
-  <p></p>
+  TALVAREN — PATCH STAGING & CHANGE RECORDS
+
+Global Patch Rules (LOCKED)
+	•	Nothing listed here is live.
+	•	No module references imply activation.
+	•	Each patch retains its full ID.
+	•	Target modules are tentative.
+	•	Sorting, reconciliation, and activation occur later.
+
+⸻
+
+ECONOMY & BASELINE PATCHES
+
+Economy-Baseline-001
+	•	Establishes foundational sink expectations.
+	•	Overrides prior loose economy assumptions.
+
+Status: PATCH
+
+⸻
+
+SCROLLS, WRITS & SCRIBE SYSTEM PATCHES
+
+PATCH-MODULE-10-ScrollRules-001
+	•	Magic Missile scroll efficiency rule.
+	•	Scroll mana cost = 3×.
+	•	Scrolls are instant cast.
+	•	Counterfeit matrices explicitly tabled.
+
+Status: PATCH
+
+⸻
+
+PATCH — Scroll Consumption Timing
+	•	Scroll is consumed on activation/use.
+	•	Supersedes consumption-on-arrival or resolution logic.
+
+Status: PATCH
+
+⸻
+
+PATCH — Scroll Inventory Limit
+	•	Scroll inventory limit: 5 per scroll type
+	•	Scrolls are non-refundable
+	•	Scrolls are consumed on activation
+
+Status: PATCH
+
+⸻
+
+PATCH — Scribe Travel Ability
+
+“REQUISITION: EMERGENCY TRANSIT”
+	•	Scribe-authored travel writ
+	•	Bureaucratic travel
+	•	Non-magical
+
+Status: Canonical Addition
+
+⸻
+
+PATCH — Caravan Transit Failure Handling
+	•	If a player leaves caravan protection voluntarily or dies after departure:
+	•	Standard death rules apply
+	•	No writ refund occurs
+
+Status: PATCH
+
+⸻
+
+FACTION & SAFE ZONE PATCHES
+
+PATCH — Faction Repair Outcome Model
+	•	Faction repair resolves as a hard reset to Neutral
+	•	No staged or incremental restoration
+	•	Supersedes all progressive repair references
+
+Status: PATCH
+
+⸻
+
+PATCH — Safe Zone Aggro Behavior
+	•	If a mob is aggroed into a Safe Zone, aggro remains bound only to:
+	•	The player who pulled the mob
+	•	Players who attack the mob
+	•	Players who heal those attackers
+
+Overrides all aggro-clearing interpretations.
+
+Status: PATCH
+
+⸻
+
+CORE SYSTEM CORRECTIONS
+
+PATCH-MODULE-1A-CoreCorrections-001
+	•	STR carry capacity correction
+	•	Attribute bonuses clarified as per-point
+	•	Removal of magical instability / corruption blooms
+	•	Removal of faction behavior from world expansion logic
+	•	Scrolls & writs share a GCD
+	•	Scroll usage blocked underwater and in storm biomes
+	•	Silence blocks reading and scroll usage
+
+Status: PATCH
+
+⸻
+
+GEOGRAPHY & WORLD RULE PATCHES
+
+PATCH-MODULE-4-Overrides-001
+	•	Polar cold is the only true survival mechanic
+	•	No endgame region exists
+	•	All conflicting geography statements overwritten
+
+Status: PATCH
+
+⸻
+
+TRAPS, CHESTS & WORLD HAZARDS
+
+PATCH — Trap System Logic
+	•	Trap categories
+	•	Detection rules
+	•	Disarm rules
+
+Status: Additive Canon
+
+⸻
+
+PATCH — Chest Loot & Trap RNG
+	•	Overrides all prior chest RNG logic
+
+Status: Hard Canon
+
+⸻
+
+PATCH — World Trap Placement & Density Logic
+	•	Trap persistence rules
+	•	Trap reshuffle logic
+
+Status: Additive Canon
+
+⸻
+
+TRAVEL & STRUCTURAL WORLD PATCHES (STAGING)
+
+PATCH-ADV-TRAVEL-001 — Adventurer Class Gate Restriction
+	•	Gate access restricted to:
+	•	Wizard
+	•	Priest
+	•	Druid
+	•	Removed from:
+	•	Warrior
+	•	Paladin
+	•	Executioner
+	•	Rogue
+	•	Necromancer
+	•	Jeweler professional exception preserved
+	•	Supersedes prior Adventurer Gate entries once activated
+
+Status: STAGING
+
+⸻
+
+PATCH-ADV-TRAVEL-LOCK-001 — Gate Restriction Confirmation
+	•	Confirms and locks Adventurer Gate restriction
+	•	Redundant with PATCH-ADV-TRAVEL-001
+	•	Retained pending reconciliation
+
+Status: STAGING
+
+⸻
+
+PATCH-CARAVAN-CONSTANTS-001 — Caravan Route Immutability
+	•	Caravan routes are immutable world constants
+	•	Never delayed, damaged, or obstructed
+	•	Routes dynamically path around hazards
+	•	Zero PvP confirmed (hard canon)
+	•	Justifies long safe travel between hubs
+
+Status: STAGING
+
+⸻
+
+PATCH-STRUCTURE-WORLDSTATE-001 — Structural World State System
+	•	Zone clusters may contain 0–2 critical structures
+	•	Durability states:
+	•	Reliable
+	•	Unstable
+	•	Unusable
+	•	Degradation sources:
+	•	Storms
+	•	Desert erosion
+	•	Sustained combat density
+	•	Laborer:
+	•	May inspect at any state
+	•	May repair only at Unusable
+	•	Repairs require ≈3 real hours of sustained labor
+	•	Discovery via:
+	•	World state
+	•	NPC rumors
+	•	Altered routes
+	•	No direct player sabotage
+
+Status: STAGING
+
+⸻
+
+PATCH-TRUE-UNIQUE-UTILIZATION-001 — True Unique Utilization Rule
+	•	True Uniques must be used at least once every 10 days
+	•	Failure results in loss; asset returns to world pool
+	•	Loss conditions limited to:
+	•	Death
+	•	Neglect
+	•	Contents transferred safely where applicable
+	•	Applies equally to all players and servers
+
+Status: STAGING
+
+⸻
+
+IDENTIFICATION & LOOT PATCHES (MODULE 7 LINEAGE)
+
+PATCH — Artifact Specialist Identification Fee Correction
+	•	Fee applies once per identification session
+	•	Fee selected randomly from combined unidentified item pool
+	•	Overrides per-player fee interpretations
+
+Status: PATCH
+
+⸻
+
+PATCH — Group Identification Ownership Rule
+	•	Unidentified items become session-group property during identification
+	•	Ownership finalized post-identification
+
+Status: PATCH
+
+⸻
+
+PATCH — Relic System Removal
+
+All relic systems removed from canon:
+	•	Immortal-crafted items
+	•	Divine relics
+	•	Relic attunement
+	•	Relic effects
+
+Status: PATCH
+
+⸻
+
+PATCH — Jeweler Identify Restriction
+	•	Cannot be used in group contexts
+	•	Restricted to personal inventory only
+	•	Target jewelry item selected randomly
+
+Status: PATCH
+
+⸻
+
+PATCH — Unidentified Item Slot Rule
+	•	Unidentified items never stack
+	•	Each occupies exactly one inventory slot
+	•	Excluded from banks and long-term storage
+
+Status: PATCH
+
+⸻
+
+HOLDING / PARKED PATCHES (NO RESOLUTION)
+
+PATCH-HOLDING-OWNER-DECISIONS-001
+
+Status: Parked
+	•	Player Homestead: Stormland Cliff Retreat
+	•	Vast Below Key Ring Law vs item-binding systems
+	•	Polar unlock permanent profession benefits vs crafting tables
+	•	Ascending / Inverse Towers classification
+
+⸻
+
+HOLDING — MODULE 7 Identification Fee Interpretation Conflict
+	•	Historical per-player fee wording
+	•	Superseded; retained for record
+
+⸻
+
+HOLDING — MODULE 7 Artifact Specialist Location Scope
+	•	Spirit Well adjacency vs city / Deep Delver restriction
+	•	Owner decision required
+
+⸻
+
+HOLDING — MODULE 7 Loot Preference Jewelry Scope
+	•	Earlier inclusion of “trinkets”
+	•	Later patches remove trinkets
+	•	Conflict parked
+
+⸻
+
+DEITIES, MANDALA & DAMAGE PATCH
+
+MODULE 8 — Deities, Mandala & Damage Types
+
+(Canonical Instructional Patch)
+	•	Overwrites all conflicting statements
+	•	Defines:
+	•	8 Prime Deities
+	•	Mandala alignments
+	•	64 Lesser Immortals
+	•	Soulforge alignment law
+	•	Cletus’ placement
+	•	All opposites and pairings
+	•	Fully synced with Modules 1–10
+
+Status: Canonical Patch
+
+⸻
+
+LEGACY PATCH REFERENCES (RETAINED)
+
+PATCH-MODULE-3-HubLogic-001
+	•	Universal guild infrastructure requirements
+	•	Profession hall mechanical removal
+	•	Safe zone authority restricted to Cook / Priest
+	•	Caravan Master restrictions
+
+⸻
+
+PATCH-MODULE-9-BossApexRules-001
+	•	Boss, Lieutenant, Apex spawn logic
+	•	Aggro priority & taunt behavior
+	•	Encounter duration targets
+	•	Loot guarantees and rarity
+
+⸻
+
+PLACEHOLDER REFERENCES
+
+(Verbatim blocks not included)
+	•	Global crowd control break rule
+	•	Trap system logic blocks
+	•	Chest loot & trap RNG blocks
+	•	World trap placement & density logic blocks
+
 </section>
 
 <section id="holding-temp">
