--- a/talvaren-vault.html
+++ b/talvaren-vault.html
@@ -449,7 +449,530 @@ Status Summary
 
 <section id="registries-temp">
   <h2>Registries — Temp</h2>
-  <p></p>
+  TALVAREN — REGISTRY STAGING
+
+(NON-AUTHORITATIVE)
+
+Registry Rules (LOCKED)
+	•	Nothing listed here is live.
+	•	No module references this file.
+	•	All entries are verbatim or explicitly marked TBD.
+	•	Sorting, reconciliation, and activation occur later.
+
+⸻
+
+CORE ITEM & EQUIPMENT REGISTRIES
+
+REG-Items-001
+	•	Canonical definition of an item:
+	•	Physical object
+	•	Occupies inventory or world space
+	•	May be consumed, equipped, or traded
+
+⸻
+
+REG-WeaponWeightClasses-001
+	•	Light
+	•	Medium
+	•	Heavy
+(Thresholds deferred to tables)
+
+⸻
+
+REG-ArmorWeightClasses-001
+	•	Light
+	•	Medium
+	•	Heavy
+(Thresholds deferred to tables)
+
+⸻
+
+REG-EquipmentSlots-001
+	•	Head
+	•	Chest
+	•	Legs
+	•	Boots
+	•	Shoulders / Back
+	•	Arms
+	•	Belt
+	•	Main Hand
+	•	Off-Hand
+	•	Ranged
+
+⸻
+
+REG-JewelrySlots-001
+	•	Ring 1
+	•	Ring 2
+	•	Ring 3
+	•	Ring 4
+	•	Neck
+
+⸻
+
+ARTIFACT & TREASURE REGISTRIES
+
+REG-ArtifactCategories-001
+	•	Ceremonial Weapons
+	•	Ceremonial Armor
+	•	Tools & Instruments
+	•	Figurines & Idols
+	•	Maps & Tablets
+	•	Household Implements
+
+Rules
+	•	Decorative only
+	•	Never equipable
+	•	No stats
+	•	No enchantments
+	•	No unknown effects
+
+⸻
+
+REG-ArtifactCulture-001
+	•	Ancient Culture Tier 1
+	•	Ancient Culture Tier 2
+	•	Ancient Culture Tier 3
+	•	Ancient Culture Tier 4
+	•	Ancient Culture Tier 5
+
+⸻
+
+REG-CulturalTreasureCultures-001
+	•	Scale-Throne Dynasts
+	•	Dawn-Forged Imperium
+	•	Verdant Court of Thorns
+	•	Black Tally Consortium
+	•	Deep Star Mariners
+
+⸻
+
+RESOURCE & ECONOMY REGISTRIES
+
+REG-ResourceSources-001
+	•	Drops
+	•	Chests
+	•	Biome placement
+	•	World events
+	•	Expeditions
+
+⸻
+
+REG-TierStructure-001
+	•	T1–T5
+	•	Poor / Common / Uncommon / Rare
+
+⸻
+
+REG-VendorBasicResources-001
+
+Smith
+	•	Coal
+	•	Flux
+	•	Basic Hardware
+	•	Resin Glue
+
+Tailor
+	•	Thread
+	•	Leather Strips
+	•	Basic Hardware
+	•	Resin Glue
+
+Jeweler
+	•	Polishing Compound
+	•	Wire
+	•	Resin Glue
+	•	Basic Blanks
+
+Alchemist
+	•	Empty Vial
+	•	Catalyst
+	•	Coal
+	•	Sulphur
+	•	Water Flask
+	•	Resin Glue
+
+Cook
+	•	Salt
+	•	Cooking Oil
+	•	Butter
+	•	Seasonings
+	•	Water Flask
+
+Scribe
+	•	Blank Parchment
+	•	Common Ink
+	•	Resin Glue
+	•	Patents
+
+Laborer
+	•	None
+
+Tamer
+	•	None
+
+⸻
+
+CLASS & PROFESSION REGISTRIES
+
+REG-Classes-001
+	•	Warrior
+	•	Paladin
+	•	Executioner
+	•	Rogue
+	•	Priest
+	•	Druid
+	•	Wizard
+	•	Necromancer
+	•	Laborer
+	•	Smith
+	•	Tailor
+	•	Jeweler
+	•	Alchemist
+	•	Cook
+	•	Scribe
+	•	Tamer
+
+Rules
+	•	Define identity
+	•	Gate abilities
+	•	Do not define gear legality
+	•	Do not override world systems
+
+⸻
+
+REG-ProfessionalClasses-001
+	•	Smith
+	•	Tailor
+	•	Jeweler
+	•	Alchemist
+	•	Cook
+	•	Scribe
+	•	Laborer
+	•	Tamer
+
+⸻
+
+STATS, DAMAGE & MANDALA REGISTRIES
+
+REG-Stats-001
+	•	STR
+	•	CON
+	•	DEX
+	•	INT
+	•	WIS
+	•	ART
+
+⸻
+
+REG-ResistanceTypes-001
+	•	Physical
+	•	Magic
+	•	Arcane
+	•	Mental
+
+⸻
+
+REG-MandalaDamageTypes-001
+	•	Light
+	•	Air
+	•	Life
+	•	Fire
+	•	Dark
+	•	Ice
+	•	Earth
+	•	Death
+
+⸻
+
+REG-MandalaAxes-001
+	•	Light ↔ Death
+	•	Air ↔ Earth
+	•	Life ↔ Dark
+	•	Fire ↔ Ice
+
+⸻
+
+REG-MandalaColorGemBindings-001
+	•	Light — Dawn-Gold / Citrine
+	•	Air — Storm-Blue / Sapphire
+	•	Life — Verdant-Green / Emerald
+	•	Fire — Ember-Red / Garnet
+	•	Dark — Umbral-Violet / Amethyst
+	•	Ice — Frost-White / Moonstone
+	•	Earth — Iron-Grey / Hematite
+	•	Death — Deep-Black / Obsidian
+
+⸻
+
+DIVINE REGISTRIES
+
+REG-PrimeDeities-001
+	•	Aurion — Light
+	•	Vaelstrix — Air
+	•	Halene — Life
+	•	Brann — Fire
+	•	Nexial — Dark
+	•	Serastra — Ice
+	•	Dorn — Earth
+	•	Cletus — Death
+
+⸻
+
+REG-DeityAuthorities-001
+
+Cletus — Exclusive Authority
+	•	Professions
+	•	Salvage
+	•	Repurposing
+	•	Soulforging metaphysics
+	•	Creative destruction
+
+(No overlap permitted)
+
+⸻
+
+REG-LesserImmortals-001
+	•	8 per Prime Deity
+	•	64 total
+	•	Flavor-only
+	•	Names not locked
+(Full name lists retained separately)
+
+⸻
+
+WORLD STRUCTURE REGISTRIES
+
+REG-SettlementStructures-001
+	•	Adventurer’s Guild
+	•	Caravaner’s Guild
+	•	Merchant Market / Trade Pavilion
+	•	Profession Infrastructure (stall-based)
+	•	Map-Study Terminal
+
+⸻
+
+REG-GuildVendorSet-001
+	•	Smith
+	•	Tailor
+	•	Jeweler
+	•	Alchemist
+	•	Cook
+	•	Scribe
+	•	Stablemaster
+	•	Fishing Vendor (water hubs only)
+
+⸻
+
+REG-ZoneClusterProperties-001
+	•	3–7 zones
+	•	Anchored by city or landmark
+	•	Soft level bands (~10)
+
+⸻
+
+GEOGRAPHY REGISTRIES
+
+REG-Megaregions-001
+	1.	Far Isles Archipelago
+	2.	Mountain Spine
+	3.	Marshlands
+	4.	Desolation Wastes
+	5.	Stormlands
+
+⸻
+
+REG-PolarContinents-001
+	•	Northern Frost Crown
+	•	Southern Glacial Expanse
+
+⸻
+
+REG-SpecialRegions-001
+	•	Arborwave Forest
+	•	Whispering Dunes
+	•	Jade Serpent Jungle
+	•	Irondeep
+	•	Blacktide Shoals
+	•	Scribe’s Last Light
+
+⸻
+
+REG-BiomeHazards-001
+	•	Polar cold (HP loss)
+	•	Desert sandstorms (vision reduction)
+
+⸻
+
+NPC, MOB & CREATURE REGISTRIES
+
+REG-EnemyTiers-001
+	•	Common
+	•	Elite
+	•	Apex
+	•	Boss
+
+⸻
+
+REG-MobCategories-001
+	•	Humanoid (sapient)
+	•	Fauna (non-sapient, corporeal)
+	•	Construct / Elemental
+	•	Non-corporeal entities
+
+⸻
+
+REG-Creature-001
+
+(Empty — reserved)
+
+⸻
+
+MOUNT REGISTRIES
+
+REG-Mounts-001
+
+Easy
+	•	Horse
+	•	Camel
+
+Moderate
+	•	Bear
+	•	Dire Wolf
+	•	Giant Boar
+	•	Giant Infant Spider
+	•	Giant Snake
+
+Advanced
+	•	Caravan Ox
+	•	Runic Turtle
+	•	War Elephant / Hephalump
+
+Pinnacle
+	•	Mimic
+
+True Unique
+	•	Unicorn
+	•	World Stag
+
+⸻
+
+REG-MountCommands-001
+	•	Stay
+	•	Go Home
+
+⸻
+
+TRAVEL & ROUTE REGISTRIES
+
+REG-TravelMethods-001
+	•	Wagons
+	•	Ferries
+	•	Ships
+	•	Skyships
+	•	VB Trolley System
+	•	VB Deep Suspension Lift
+
+⸻
+
+REG-TravelModes-001
+	•	Wagon caravans
+	•	River ferries
+	•	Ocean and air ships
+	•	VB Trolley
+	•	Deep Suspension Lift
+
+⸻
+
+REG-CaravanRoutes-001
+	•	Immutable world constants
+	•	Never delayed or obstructed
+
+⸻
+
+REG-TravelInfrastructure-001
+	•	Outpost Boards
+
+⸻
+
+SCROLLS, WRITS & SPELL REGISTRIES
+
+REG-Spells-001
+	•	Magical effects
+	•	Require legitimate casting
+	•	Leave Spell Matrix imprint
+
+⸻
+
+REG-Scrolls-001
+	•	Spell-adjacent
+	•	Consumable
+	•	Bureaucratically limited
+	•	Never replace class identity
+
+⸻
+
+REG-Writs-001
+	•	Faction Appeal / Petition
+	•	Caravan Transit Requisition
+	•	Requisition Mana
+
+⸻
+
+REG-Abilities-001
+	•	Non-spell player actions
+	•	Class- or profession-bound
+
+⸻
+
+REG-Recipes-001
+	•	Instructional objects
+	•	Govern crafting outcomes
+
+⸻
+
+REG-SpellMatrixComponents-001
+	•	Matrix Shard
+	•	Spell Matrix
+
+⸻
+
+MISCELLANEOUS REGISTRIES
+
+REG-FieldKit-UtilityPool-001
+	1.	Low-grade emergency potion
+	2.	Improvised utility key
+	3.	Field bandage (out of combat)
+	4.	Chalk / marker
+	5.	Glowroot brew
+
+⸻
+
+REG-IdentificationNPCs-001
+	•	Artifact Specialist
+
+⸻
+
+REG-UnderwaterFactions-001
+	•	Merfolk survivalists
+	•	Sahuagin Empire
+
+⸻
+
+REG-RandomWorldEvents-001
+	•	Patrol migrations
+	•	Fey territorial shifts
+	•	Beast drift
+
+⸻
+
+REG-TrapCategories-001
+	1.	Impact
+	2.	Poison / Disease
+	3.	Reflex
+	4.	Arcane
+	5.	Mind
+
 </section>
 
 <section id="patches-temp">
